# mcp-bizintel

./: .env.example  .gitignore  LICENSE  README.md  deploy.sh  nixpacks.toml  railway.toml  requirements.txt  server.json  server.py  smithery.yaml
.github/workflows/: publish-mcp.yml
db/: cache.py  keys.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/bizintel_mcp/: __init__.py
tests/: conftest.py  test_server.py
tools/: audit.py  scoring.py  search.py  techstack.py
